# snowball

./: .gitignore  CLAUDE.md  GEMINI.md  Makefile  README.md  docker-compose.yml
.claude/: README.md
.gemini/: GEMINI.md
.jules/: sentinel.md
backend/: .env  database.py  main.py  models.py  pyproject.toml
backend/scripts/: manage.py
backend/src/snowball/adapters/api/: dtos.py  routes.py
backend/src/snowball/adapters/db/: models.py  repositories.py
backend/src/snowball/domain/: entities.py  exceptions.py  ports.py  services.py
backend/src/snowball/infrastructure/: db.py  main.py  security.py
backend/src/snowball/use_cases/: assets.py  auth.py  portfolio.py  sync.py  trade.py
backend/src/snowball/utils/: formatting.py
backend/tests/: conftest.py  test_main.py
backend/tests/e2e/: test_accounts.py  test_assets.py  test_finance.py  test_security_account_idor.py  test_security_idor.py  test_security_idor_account.py  test_security_isolation.py
backend/tests/integration/: test_repositories.py
backend/tests/unit/domain/: test_services.py
backend/tests/unit/scripts/: test_manage.py
backend/tests/unit/use_cases/: test_auth.py  test_portfolio.py  test_trade.py
backend/tests/unit/utils/: test_formatting.py
be/: GEMINI.md  pyproject.toml
be/scripts/: common.sh  create-new-feature.sh
be/templates/: plan-template.md  spec-template.md  tasks-template.md
be/test/: test_main.py
frontend/: package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
scripts/: update-agent-context.sh
templates/: plan-template.md  spec-template.md  (+1 more)
(+74 files in other folders)
