[project]
name = "snowball-be"
version = "0.0.1"
description = "A project for the 'snowball backend' module."
authors = [{ name = "VeritasForge", email = "greenfrog@outlook.kr" }]
requires-python = ">=3.13"

dependencies = [
    "typer>=0.16.1",
]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipython>=9.5.0",
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "ruff>=0.12.11",
]
